--- a/css/story.css
+++ b/css/story.css
@@ -399,7 +399,9 @@ footer {
 }
 
 .thai-text {
-    white-space: pre-wrap;
+  word-break: break-word;
+  overflow-wrap: break-word;
+  line-break: loose;
 }
 
 .shake {
